# ultrastar-queue

./: .env  .gitignore  README.md  alembic.ini  auth.py  docker-compose.yaml  flake.nix  main.py  module.nix  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  db.sqlite  flake-mod.nix  pyproject.toml  requirements.txt  setup.py
backend/song_examples/: README_extended.md
backend/src/: main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 4c524ed29553_init_migration.py  9054a26af785_initial_migration.py
backend/src/app/: app.py  config.py  database.py  dependencies.py  main.py
backend/src/app/admin/: routes.py
backend/src/app/auth/: crud.py  dependencies.py  exceptions.py  routes.py  schemas.py  utils.py
backend/src/app/queue/: config.py  exceptions.py  routes.py  schemas.py  service.py
backend/src/app/routes/: admin.py  auth.py  queue.py  songs.py
backend/src/app/schemas/: queue.py
backend/src/app/services/: auth.py  queue.py
backend/src/app/songs/: crud.py  exceptions.py  models.py  routes.py
backend/src/database/models/: songs.py
backend/src/database/services/: session.py
backend/src/logging/: config.json  controller.py
backend/src/logging_controller/: config.json  controller.py  filters.py
backend/src/ultrastar_file_parser/: __init__.py  exceptions.py  parser.py  schemas.py
backend/tests/: conftest.py  test_main.py
backend/tests/unit/api/: test_admin.py  test_auth.py  test_queue.py  test_songs.py
database/: db.py  models.py
frontend/: Dockerfile  README.md  flake-mod.nix  package-lock.json  (+2 more)
(+107 files in other folders)
