[tool.poetry]
name = "src"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT="^2.8"
SQLAlchemy="^2.0"
aiosqlite="^0.20"
alembic="^1.13"
fastapi="^0.111" 
httpx="^0.23"
passlib={extras = ["bcrypt"], version = "^1.7"}
bcrypt="==4.2.1"
pydantic="^2.8"
pydantic-settings="^2.4"
python-dotenv="^1.0"
sqlmodel="^0"
tinytag="^2"
uvicorn="^0.30"
watchfiles="==0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ultrastar-queue-backend = "src.app.main:start"
